// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <ResetButton /> should handle clicks 1`] = `
<SurroundPortals
  portalName="filter.reset-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [MockFunction],
    }
  }
>
  <Button
    disabled={false}
    fullWidth={true}
    onClick={[MockFunction]}
    size="small"
    testId="clearAllButton"
    variant="outlined"
  >
    <Text
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="filter.clear_all"
      transform={null}
    />
  </Button>
</SurroundPortals>
`;

exports[`Filter: <ResetButton /> should render as activated 1`] = `
<SurroundPortals
  portalName="filter.reset-button"
  portalProps={
    {
      "disabled": false,
      "onClick": [Function],
    }
  }
>
  <Button
    disabled={false}
    fullWidth={true}
    onClick={[Function]}
    size="small"
    testId="clearAllButton"
    variant="outlined"
  >
    <Text
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="filter.clear_all"
      transform={null}
    />
  </Button>
</SurroundPortals>
`;

exports[`Filter: <ResetButton /> should render as deactivated 1`] = `
<SurroundPortals
  portalName="filter.reset-button"
  portalProps={
    {
      "disabled": true,
      "onClick": [Function],
    }
  }
>
  <Button
    disabled={true}
    fullWidth={true}
    onClick={[Function]}
    size="small"
    testId="clearAllButton"
    variant="outlined"
  >
    <Text
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="filter.clear_all"
      transform={null}
    />
  </Button>
</SurroundPortals>
`;
